k8s/base/workloads/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: keycloak
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.1.4
        args:
        - start-dev
        - --import-realm
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import
          readOnly: true
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      volumes:
      - name: realm-config
        configMap:
          name: keycloak-realm-config
